# OpenMMArm-SDK

./: .gitignore  LICENSE  OPENMMARM_ARCHITECTURE.md  README.md
src/openmmarm_bringup/: CMakeLists.txt  README.md  package.xml
src/openmmarm_bringup/launch/: real_arm.launch.py  sim_arm.launch.py
src/openmmarm_controller/: CMakeLists.txt  README.md  package.xml
src/openmmarm_controller/config/: openmmarm_controller.yaml
src/openmmarm_controller/include/cmd/: CmdSdk.h  UdpSdk.h
src/openmmarm_controller/include/ctrl/: CtrlComponents.h
src/openmmarm_controller/include/fsm/: FSMState.h  FiniteStateMachine.h  State_JointCtrl.h  State_Passive.h
src/openmmarm_controller/include/io/: IOInterface.h  IOMujoco.h  IOROS.h  IOUDP.h
src/openmmarm_controller/include/model/: ArmModel.h
src/openmmarm_controller/src/: main.cpp
src/openmmarm_controller/src/cmd/: CmdSdk.cpp  UdpSdk.cpp
src/openmmarm_controller/src/fsm/: FSMState.cpp  FiniteStateMachine.cpp  State_JointCtrl.cpp  State_Passive.cpp
src/openmmarm_controller/src/io/: IOMujoco.cpp  IOROS.cpp  IOUDP.cpp
src/openmmarm_description/: CMakeLists.txt  package.xml
src/openmmarm_description/config/: display.rviz
src/openmmarm_description/launch/: display.launch.py
src/openmmarm_description/meshes/: base_link.STL  link1.STL  link2.STL  link6.STL
src/openmmarm_description/urdf/: openmmarm.ros2_control.xacro  openmmarm.urdf  openmmarm_inertia.csv  openmmarm_macro.xacro  robot.xacro
src/openmmarm_hw/: CMakeLists.txt  README.md  openmmarm_hw.xml  package.xml
src/openmmarm_hw/config/: openmmarm_hw_config.yaml
src/openmmarm_hw/include/openmmarm_hw/: arm_sdk_client.hpp  openmmarm_arm_common.h  openmmarm_hw.hpp
src/openmmarm_hw/launch/: openmmarm_hw.launch.py
src/openmmarm_hw/src/: arm_sdk_client.cpp  openmmarm_hw.cpp
src/openmmarm_interfaces/: CMakeLists.txt  package.xml
src/openmmarm_interfaces/msg/: MotorCmd.msg  MotorState.msg
src/openmmarm_moveit_config/: CMakeLists.txt  README.md  package.xml
src/openmmarm_moveit_config/config/: cartesian_limits.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  openmmarm.srdf
src/openmmarm_moveit_config/launch/: demo.launch.py  move_group.launch.py
src/openmmarm_sdk/: CMakeLists.txt  README.md  package.xml
src/openmmarm_sdk/examples/: example_joint_ctrl.cpp  example_lowcmd.cpp
src/openmmarm_sdk/include/openmmarm_sdk/: math_types.h  openmmarm_arm.h  openmmarm_arm_common.h  timer.h  udp_port.h
src/openmmarm_sdk/src/: udp_port.cpp
