<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openmmarm_bringup</name>
  <version>1.0.0</version>
  <description>OpenMMARM 机械臂的统一启动包，提供仿真和实机两种启动入口</description>
  <maintainer email="developer@example.com">OpenMMARM Team</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>openmmarm_description</exec_depend>
  <exec_depend>openmmarm_hw</exec_depend>
  <exec_depend>openmmarm_moveit_config</exec_depend>
  <exec_depend>openmmarm_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
