<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openmmarm_controller</name>
  <version>1.0.0</version>
  <description>OpenMMARM Controller for ROS 2 Humble</description>
  <maintainer email="developer@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>openmmarm_interfaces</depend>
  <depend>eigen</depend>
  <depend>openmmarm_sdk</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
