<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openmmarm_moveit_config</name>
  <version>1.0.0</version>
  <description>OpenMMARM 机械臂的 MoveIt 2 运动规划配置包</description>
  <maintainer email="developer@example.com">OpenMMARM Team</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>openmmarm_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
