<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openmmarm_sdk</name>
  <version>1.0.0</version>
  <description>OpenMMARM 机械臂独立 C++ SDK，提供 UDP 通信和控制接口</description>
  <maintainer email="dev@openmmarm.com">OpenMMARM Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
